<resources>
    <string name="app_name">AdoptaDog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Activity_principal_drawer-->
    <string name="nav_home">Inicio</string>
    <string name="nav_dogs">Mascotas</string>
    <string name="nav_follow_us">Siguenos</string>
    <string name="nav_maps">Mapa</string>
    <string name="nav_contact">Contacto</string>

    <!--FragmentHome-->
    <string name="main_title">Fundacion Salva un Amigo</string>
    <string name="main_logo">Logo principal</string>
    <string name="main_text">Fundacion Salva un Amigo le ayudara a encontrar su mascota ideal, tenemos variedad de
        razas para escoger. Ademas le ofrecemos una vista de todos los puntos de comida que tenemos, para que asi,
        no tenga que preocuparse por no tener a donde dirigirse a comprarle alimento a su mascota. Tenemos atencion
        las 24 horas del dia los siete dias a la semana por si tiene alguna inquietud, nuestra aplicacion le permite
        contactarnos de forma inmediata.
    </string>
    <string name="main_text_two">Nuestras caracteristicas a ofrecerle son:</string>
    <string name="characteristic_one">1. Mascotas de la mejor calidad y raza.</string>
    <string name="characteristic_two">2. Atencion al cliente las 24 horas.</string>
    <string name="characteristic_three">3. Varios puntos de comida.</string>
    <string name="characteristic_four">4. Tenemos precios razonables.</string>
    <string name="characteristic_five">5. No se arrepentira.</string>

    <!--item_list_dog-->
    <string name="image_list_dog">imagen del perro</string>
    <string name="name_list_dog">Nombre</string>
    <string name="age_list_dog">Edad</string>
    <string name="breed_list_dog">Raza</string>
    <string name="gender_list_dog">Genero</string>
    <string name="title_activity_maps_dogs">Map</string>

    <!--FragmentFollowUs-->
    <string name="image_logo">Logo principal</string>
    <string name="view_descripcion_logo">La Fundacion Salva un Amigo se encarga de ofrecer razas de perros finas a
        aquellas personas las cuales esten interesadas en encontrar a su mascota ideal, contamos con razas extranjeras
        y comunes las cuales por medio de la adopcion o apadrinacion obtendran un hogar estable. Siguenos en nuestras
        redes sociales las cuales se presentan a continuacion, asi estaras al dia de
        nuestras publicaciones y ofertas de las mejores razas que usted podra comprar.
    </string>
    <string name="image_facebook">Logo de Facebook</string>
    <string name="image_twitter">Logo de Twitter</string>
    <string name="title_activity_maps">Map</string>

    <string name="contact_name">Nombre</string>
    <string name="contact_last_name">Apellido</string>
    <string name="contact_contact_message">Mensaje</string>
    <string name="btn_send_contact">Enviar Solicitud</string>

    <!--nav_header_activity_principal-->
    <string name="title">Fundacion Salva un Amigo</string>
    <string name="title_email">pruebafundacion@gmail.com</string>

</resources>
