<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dogs"
            android:icon="@drawable/ic_dog_side_black_48dp"
            android:title="@string/nav_dogs" />
        <item
            android:id="@+id/nav_follow_us"
            android:icon="@drawable/baseline_group_black_48dp"
            android:title="@string/nav_follow_us" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_google_maps_black_48dp"
            android:title="@string/nav_maps" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_email_black_48dp"
            android:title="@string/nav_contact" />
    </group>

</menu>
